...
                .font(AppFonts.title16)
                .frame(maxWidth: .infinity)
                .padding()
                .background(AppColors.backButtonColor)
                .clipShape(Capsule())
                .foregroundColor(AppColors.textPrimary)
                .accessibilityIdentifier("detailBackButton")
        }
    }
}


#Preview {
...
