...
                TextField("", text: $query, onCommit: onCommit)
                    .font(AppFonts.title16)
                    .foregroundColor(AppColors.textPrimary)
                    .tint(AppColors.textPrimary)
                    .autocapitalization(.none)
                    .disableAutocorrection(true)
                    .accessibilityIdentifier("searchField")
            }
        }
        .padding()
        .frame(maxWidth: .infinity)
        .background(RoundedRectangle(cornerRadius: AppLayout.cornerRadius).stroke(AppColors.bodySecondary, lineWidth: 1))
    }
...
